--- a/GoogleMapApiProject/map.css
+++ b/GoogleMapApiProject/map.css
@@ -2,7 +2,7 @@ html, body, #map-canvas {height: 100%; margin: 0px; padding: 0px; font-family:'A
 #frameContent {position: absolute; top: 0; bottom: 0;  right: 0; width: 300px; height: 100%; overflow: hidden; background: #4f5052; box-shadow: 0px 0px 10px #888; z-index: 5;}
 #mapContent{position: fixed; top: 0; left: 0; right: 300px; bottom: 0; overflow: auto;  background: #fff;}
 .location {padding:0; margin:0; list-style-type: none;}
-.location a {display:block; color:#fff; height:50px; border-top:solid 1px #656668; border-bottom:solid 1px #000001; padding:10px 10px 5px 10px;}
+.location a {display:block; color:#fff; border-top:solid 1px #656668; border-bottom:solid 1px #000001; padding:10px 10px 10px 10px;}
 .location a:hover {background:#1566a3;}
 .storeName {font-size:16px; margin:0; text-shadow: 1px 1px #333;}
 .storeAddress {font-size:12px; text-shadow: 1px 1px #333;}
